# octocloud-templates

./: .devcontainer.json  .flake8  .gitignore  .mypy.ini  Dockerfile  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
biogpt/: Dockerfile  model.py  requirements.txt  server.py
diffusers-prompthero/: Dockerfile  model.py  requirements.txt  server.py
film/: README.md  generate_test_sample.py  parse_response.py
flan-t5-small/: Dockerfile  model.py  server.py
tests/: test_flan_t5_small.py  utils.py
triton/: README.md
triton/flan-t5-small/: build_config.py  infer.py  infer2.py  infer_grpc.py  model.py  requirements.txt
triton/utils/: triton_types.py  triton_utils.py
utils/: triton_utils.py
