[tool.poetry]
name = "octocloud-templates"
version = "0.1.0"
description = "OctoML Inference Containers"
authors = ["OctoML developers"]
#packages = [
#    { include = "octocloud-templates", from = "." },
#]

[tool.poetry.dependencies]
python = ">=3.10.0"

[tool.poetry.dev-dependencies]
black = "23.3.0"
isort = "5.12.0"
mypy = "1.2.0"
flake8 = "6.0.0"
pre-commit = "3.2.2"
pytest = "7.3.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
exclude = '(.*package_templates.*\.py | */.venv/*)'